--- a/incodityReservation.Web/Areas/Admin/Views/Villa/Index.cshtml
+++ b/incodityReservation.Web/Areas/Admin/Views/Villa/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<incodityReservation.Application.Dtos.VillaTable>
+﻿@model SearchVillaModel
 
 @{
     ViewData["Title"] = "لیست ویلا ها";
@@ -8,22 +8,56 @@
     <a href="@Url.Action("Create","Villa")" class="btn btn-primary m-1">افزودن ویلای جدید</a>
 </div>
 
+<div class="mb-5 mt-3">
+    <form>
+        <table class="table">
+            <thead>
+            <tr>
+                <th>نام ویلا</th>
+                <th>نام شهر</th>
+                <th>از قیمت</th>
+                <th>تا قیمت</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>
+                        <input class="form-control" type="text" name="Name" />
+                </td>
+                <td>
+                        <input class="form-control" type="text" name="City" />
+                </td>
+                <td>
+                    <input class="form-control" type="number" name="from" />
+                </td>
+                <td>
+                    <input class="form-control" type="number" name="to" />
+                </td>
+                <td>
+                        <button type="submit" class="btn btn-primary">جست وجو</button>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </form>
+</div>
+
 <table class="table table-bordered table-hover table table-striped align-middle table-responsive" width="100%">
     <thead>
     <tr>
         <th></th>
         <th>نام ویلا</th>
-            <th>نام شهر</th>
+        <th>نام شهر</th>
         <th>اجاره بها</th>
         <th>تصویر</th>
         <th>تاریخ شروع</th>
         <th>تاریخ پایان</th>
         <th>بروز رسانی</th>
-            <th>حذف</th>
+        <th>حذف</th>
     </tr>
     </thead>
     <tbody>
-    @foreach (var item in Model)
+    @foreach (var item in Model.Data)
     {
         <tr>
             <td>@item.Id</td>
@@ -34,14 +68,14 @@
             <td>@item.StartDate</td>
             <td>@item.ExpireDate</td>
             <td>
-                    <a asp-action="Edit" asp-route-Id="@item.Id" class="btn btn-success m-1">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-refresh" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M20 11a8.1 8.1 0 0 0 -15.5 -2m-.5 -4v4h4" /><path d="M4 13a8.1 8.1 0 0 0 15.5 2m.5 4v-4h-4" /></svg>
+                <a asp-action="Edit" asp-route-Id="@item.Id" class="btn btn-success m-1">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-refresh" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M20 11a8.1 8.1 0 0 0 -15.5 -2m-.5 -4v4h4" /><path d="M4 13a8.1 8.1 0 0 0 15.5 2m.5 4v-4h-4" /></svg>
                 </a>
             </td>
             <td>
                 <form method="post" asp-action="Delete" asp-route-Id="@item.Id">
-                        <button type="submit" class="btn btn-danger m-1">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-http-delete" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M3 8v8h2a2 2 0 0 0 2 -2v-4a2 2 0 0 0 -2 -2h-2z" /><path d="M14 8h-4v8h4" /><path d="M10 12h2.5" /><path d="M17 8v8h4" /></svg>
+                    <button type="submit" class="btn btn-danger m-1">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-http-delete" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M3 8v8h2a2 2 0 0 0 2 -2v-4a2 2 0 0 0 -2 -2h-2z" /><path d="M14 8h-4v8h4" /><path d="M10 12h2.5" /><path d="M17 8v8h4" /></svg>
                     </button>
                 </form>
             </td>
@@ -49,3 +83,40 @@
     }
     </tbody>
 </table>
+
+<nav aria-label="Page navigation example">
+    <ul class="pagination">
+        @if (Model.TotalPages > 1)
+        {
+            <li class="page-item">
+                <a class="page-link" href="/Admin/Villa/Index?Name=@Model.Name&City=@Model.City&From=@Model.From&To=@Model.To&currentPage=@(Model.CurrentPage-1)" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                    <span class="sr-only">Previous</span>
+                </a>
+            </li>
+        }
+
+        @for (int i = 1; i <= Model.TotalPages; i++)
+        {
+            if (i == Model.CurrentPage)
+            {
+                <li class="page-item"><a class="page-link active" href="/Admin/Villa/Index?Name=@Model.Name&City=@Model.City&From=@Model.From&To=@Model.To&currentPage=@i">@i</a></li>
+            }
+            else
+            {
+                <li class="page-item"><a class="page-link" href="/Admin/Villa/Index?Name=@Model.Name&City=@Model.City&From=@Model.From&To=@Model.To&currentPage=@i">@i</a></li>
+            }
+
+        }
+        @if (Model.CurrentPage < Model.TotalPages)
+        {
+            <li class="page-item">
+                <a class="page-link" href="/Admin/Villa/Index?Name=@Model.Name&City=@Model.City&From=@Model.From&To=@Model.To&currentPage=@(Model.CurrentPage+1)" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </li>
+        }
+
+    </ul>
+</nav>
