--- a/incodityReservation.Web/Views/Home/Register.cshtml
+++ b/incodityReservation.Web/Views/Home/Register.cshtml
@@ -21,7 +21,7 @@
         <input type="text" class="form-control" asp-for="UserName">
     </div>
     <div class="form-group">
-        <label ></label>
+        <label >رمز عبور</label>
         <input type="password" class="form-control" asp-for="PassWord">
     </div>
     <button type="submit" class="btn btn-primary">ثبت نام</button>
